samples/_failures_safe/1761180290_ec4b27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d99d3dd4.c: In function ‘main’:
./samples/SAFE/__tmp_d99d3dd4.c:172:9: error: expected expression at end of input
  172 |         if (handle_event(&sm, next_event) != 0)
      |         ^~
./samples/SAFE/__tmp_d99d3dd4.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d99d3dd4.c:172:9: error: expected declaration or statement at end of input
